# kvembedding

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml  setup.py
examples/: train_movielen_1m.py
kv_embedding/: kv_embedding.py
python/kv_table/: __init__.py  kv_embedding.py  optimizer.py
src/: kv_core.cpp  kv_core.hpp  kv_core_binding.cpp
