[build-system]
requires = [
    "setuptools>=40",
    "wheel",
    "torch>=1.9.0",
    "pybind11>=2.5.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.isort]
profile = "black"